--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,10 +15,9 @@ jobs:
 
   steps:
   - task: UseDotNet@2
-    displayName: 'Install .NET 8'
+    displayName: 'Install .NET 9'
     inputs:
-      packageType: sdk
-      version: '8.0.x'
+      useGlobalJson: true
   - task: NuGetAuthenticate@1
   - script: ./publish.cmd Release
     displayName: 'Build'
