--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@
 
 /packages/*
 /Distribution/Configuration/server-access.json
+
+MSBuildWorkspaceRunner/bin/
+MSBuildWorkspaceRunner/obj/
+MSBuildWorkspaceRunner/nupkg/
