--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -6,6 +6,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+          fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
 
     - name: Install .NET 9
       uses: actions/setup-dotnet@v4
