--- a/MSBuildWorkspaceRunner/MSBuildWorkspaceRunner.csproj
+++ b/MSBuildWorkspaceRunner/MSBuildWorkspaceRunner.csproj
@@ -9,9 +9,11 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>msbuildworkspace</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
+    <NoWarn>RS2008,RS1036</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Microsoft.Build.Locator" Version="1.7.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.11.0" />
